--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <link>
     <meta charset="UTF-8">
     <title>Dio Dino Game</title>
-    <link rel="stylesheel" href="style.css"></link>
+    <link rel="stylesheet" href="style.css"></link>
     <script src="script.js" charset="UTF-8" defer></script>
 </head>
 <body>
     <div class="backgroud">
-        <div class="Dino"></div>
+        <div class="dino"></div>
     </div>
 </body>
 </html>
