--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="script.js" charset="UTF-8" defer></script>
 </head>
 <body>
-    <div class="backgroud">
+    <div class="background">
         <div class="dino"></div>
     </div>
 </body>
